# llm

./: README.md
kaggle/: README.md  pyproject.toml
kaggle/202406/: 20240613.ipynb
red-team-project/: pyproject.toml
red-team-project/src/core/: api.py  base_code.py
testProject/: pyproject.toml
