[tool.poetry]
name = "dev-test"
version = "0.1.0"
description = ""
authors = ["kevin <ftkevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = {version = "^0.18.1+cpu", source = "pytorch"}
torchaudio = {version = "^2.3.1+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
